# PolynomialFieldFactorization

./: CMakeLists.txt  flint_wrapp.cpp  flint_wrapp.hpp  main.cpp
cmake/: Findflint.cmake  Findgmp.cmake
